[package]
name = "Axolotl-Rust"
version = "0.0.1"
authors = ["harrison <notallama@gmail.com>"]
links = "curve25519-donna"
build = "build.rs"


[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[build-dependencies]
gcc = "0.3"

[dependencies]
rust-crypto = "*"
rand = "*"
